--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 node_js:
 - 0.7
-
 before_install:
   - npm install -g mocha
+install:
   - npm install
-
 branches:
   only:
     - master
