--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha api/user/user.spec.js --watch",
+    "test": "NODE_ENV=test mocha api/user/user.spec.js",
     "start": "node bin/www.js"
   },
   "author": "",
