--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha api/user/user.spec.js",
-    "start": "node bin/www.js"
+    "start": "node bin/www.js",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
+    "eslint": "^4.7.2",
     "mocha": "^3.2.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
