--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
+    "coveralls": "^2.13.1",
     "eslint": "^4.7.2",
     "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
   }
